# contract-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.sh  vercel.json
content/: benchmark.en.md  benchmark.zh.md  fincritical_results.toml  franken-ocr.en.md  franken-ocr.zh.md  franken_results.toml  kleister-nda.en.md  kleister-nda.zh.md  kleister_results.toml  landing.en.toml  landing.zh.toml  landing_results.toml  layout-coverage.en.md  layout-coverage.zh.md  layout_results.toml  ocr-omission.en.md  ocr-omission.zh.md  signature-detection.en.md  signature-detection.zh.md  signature_results.toml  vision-ocr.en.md  vision-ocr.zh.md  vision_ocr_results.toml
scripts/: benchmark_franken.py  measure_constrained.py  measure_ensemble.py  measure_gpu.py  measure_vision_ocr.py
tests/: test_abac.py  test_agent_e2e.py  test_agent_hitl.py  test_agent_llm_planner.py  test_agent_models.py  test_agent_planner.py  test_agent_runner.py  test_agent_tools_more.py  test_agent_tools_retrieve.py  test_agent_tools_vertical.py  test_api_agent.py  test_api_app.py  test_api_service.py  test_app_smoke.py  test_ask.py  test_baseline.py  test_baseline_vertical.py  test_benchmark_cli.py  test_benchmark_core.py  test_chunk.py  test_ci_workflow.py  test_clean_lift.py  test_clean_pipeline.py  test_compare.py  test_config.py  test_connector_local.py  test_connector_templates.py  test_constrained_extractor.py  test_content_drift.py  test_coverage.py  test_cross_encoder_rerank.py  test_crosscheck.py  test_cuad.py  test_degrade.py  (+104 more)
(+169 files in other folders)
