[project]
name = "contract-rag"
version = "0.0.0"
description = "Cleaning + structured-extraction pipeline for dirty contract PDFs — sourced, verified, confidence-scored facts, benchmarked honestly on CUAD, Kleister-NDA, Tobacco800, FinCriticalED, and EDiTh."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.107.0",
    "ftfy>=6.3.1",
    "instructor>=1.15.3",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pydantic>=2.7",
    "pypdfium2>=5.10.1",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=5.0.0",
]
app = [
    "streamlit>=1.40",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]
pgvector = [
    "psycopg[binary]>=3.2",
]
rerank = [
    "sentence-transformers>=3.0",
]
eval = [
    "deepeval>=1.0",
    "ragas>=0.2",
]
benchmark = ["matplotlib>=3.8"]
site = ["markdown>=3.5"]

[project.urls]
Homepage = "https://contractrag.com"
Repository = "https://github.com/qiangweihewu/contract-rag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
